# event-appointments

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
configuration/: default.yaml
migrations/: 20230930132154_init.sql
shared/: Cargo.toml
shared/src/: configuration.rs  db.rs  email_client.rs  lib.rs  qr_client.rs
shared/src/domain/: appointment.rs  email.rs  invitation.rs  mod.rs  uri.rs
tickets_cli/: Cargo.toml
tickets_cli/src/: cli.rs  main.rs
tickets_cli/src/appointment/: create.rs  delete.rs  generate.rs  mod.rs  send.rs
web_server/: Cargo.toml
web_server/src/: error.rs  lib.rs  main.rs  startup.rs  telemetry.rs
web_server/src/repository/: appointment.rs  invitation.rs  mod.rs
web_server/src/routes/: appointment.rs  invitation.rs  mod.rs  validation.rs
web_server/src/templates/: email.html  qr.html
web_server/tests/api/: appointment.rs  helpers.rs  main.rs
