[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
serde-aux = "4.2.0"
config = "0.13.3"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "macros", "json", "chrono"] }
anyhow = "1.0.75"
thiserror = "1.0.47"
chrono = { version = "0.4.29", features = ["serde"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }


secrecy = { version = "0.8", features = ["serde"] }
validator = "0.16.1"
rand = "0.8.5"

reqwest = { version = "0.11.20", features = ["json", "stream"] }

qrcode = "0.12.0"
image = "0.23.14"
base64 = "0.13"
url = { version = "2.4.1" , features = ["serde"] }
once_cell = "1.18.0"
claims = "0.7.1"


[dev-dependencies]
fake = "2.6.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.5.19"
mockito = "0.30"