[package]
name = "tickets_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }

tokio = { version = "1.32.0", features = ["full"] }
reqwest = "0.11.18"
structopt = "0.3.26"
anyhow = "1.0.58"
chrono = "0.4.31"

uuid = { version = "1.4.1", features = ["serde", "v4"] }
once_cell = "1.18.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"

lazy_static = "1.4.0"

[dev-dependencies]
mockito = "0.30"