[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_server"

[dependencies]
shared = { path = "../shared" }

actix-web = "4.4.0"
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
thiserror = "1.0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "macros", "json", "chrono"] }
reqwest = "0.11.18"
chrono = "0.4.31"

tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.6"
secrecy = { version = "0.8", features = ["serde"] }

uuid = { version = "1.4.1", features = ["serde", "v4"] }
futures = "0.3.28"
url = { version = "2.4.1" , features = ["serde"] }

[dev-dependencies]
once_cell = "1.18.0"